<resources>
    <string name="app_name">CompassApp</string>
    <string
        name="missing_location_permission_aborted">Your location is required to use navigation.</string>
    <string name="missing_location_permission">Your location is required to use navigation.</string>
    <string name="target_retry">Retry</string>
    <string name="permission_error_go_to_settings">Settings</string>
    <string
        name="missing_location_permission_disabled">You\'ve disabled location services. Please enable it to use navigation.</string>
    <string name="pick_target_title">Navigate to coordinates</string>
    <string
        name="pick_target_message">Enter the latitude and longitude to navigate towards the location.</string>
    <string name="pick_target_longitude">Longitude</string>
    <string name="pick_target_latitude">Latitude</string>
    <string name="pick_target_confirm">Navigate</string>
    <string name="pick_target_error_latitude">Enter latitude in range %1$d to %2$d</string>
    <string name="pick_target_error_longitude">Enter longitude in range %1$d to %2$d</string>
    <string name="current_target_title">Destination</string>
    <string name="current_target_latitude">Latitude:</string>
    <string name="current_target_longitude">Longitude:</string>
</resources>
