<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    >

    <data>

        <variable
            name="model"
            type="pl.mkwiecinski.compassapp.vm.TargetPickerViewModel"/>

        <import type="pl.mkwiecinski.compassapp.shared.validation.ValidationKey"/>
    </data>

    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/xlargeMargin">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/pick_target_title"
                android:textAppearance="@style/TextAppearance.AppCompat.Title"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mediumMargin"
                android:text="@string/pick_target_message"
                android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblLatitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mediumMargin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pick_target_latitude"
                    android:imeOptions="actionNext"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@={model.latitude}"/>
            </android.support.design.widget.TextInputLayout>

            <android.support.design.widget.TextInputLayout
                android:id="@+id/lblLongitude"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/mediumMargin">

                <android.support.design.widget.TextInputEditText
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/pick_target_longitude"
                    android:imeOptions="actionDone"
                    android:inputType="numberDecimal|numberSigned"
                    android:maxLength="20"
                    android:maxLines="1"
                    android:text="@={model.longitude}"/>
            </android.support.design.widget.TextInputLayout>
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="end"
            android:padding="@dimen/mediumMargin">

            <Button
                style="@style/Widget.AppCompat.Button.Borderless.Colored"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:onClick="@{model.validateCommand}"
                android:text="@string/pick_target_confirm"/>
        </LinearLayout>
    </LinearLayout>
</layout>