<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:app="http://schemas.android.com/apk/res-auto"
        xmlns:tools="http://schemas.android.com/tools">

    <data>

        <variable
            name="target"
            type="pl.mkwiecinski.compassapp.models.TargetModel"/>

        <variable
            name="isCalculating"
            type="java.lang.Boolean"/>
    </data>

    <android.support.v7.widget.CardView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:visibility="@{target != null}">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="@dimen/largeMargin">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_target_title"
                    android:textAppearance="@style/Base.TextAppearance.AppCompat.Title"/>

                <FrameLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:layout_marginStart="@dimen/mediumMargin"
                    android:minWidth="30dp">

                    <com.wang.avi.AVLoadingIndicatorView
                        style="@style/AVLoadingIndicatorView.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:visibility="@{isCalculating}"
                        app:indicatorColor="?colorAccent"
                        app:indicatorName="BallClipRotateMultipleIndicator"/>

                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:tint="#4CAF50"
                        android:visibility="@{!isCalculating}"
                        app:srcCompat="@drawable/ic_check_circle"/>
                </FrameLayout>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_target_latitude"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/smallMargin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/primary_text_light"
                    app:coordinate="@{target.latitude}"
                    tools:text="123"/>
            </LinearLayout>

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/current_target_longitude"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"/>

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="@dimen/smallMargin"
                    android:textAppearance="@style/TextAppearance.AppCompat.Small"
                    android:textColor="@android:color/primary_text_light"
                    app:coordinate="@{target.longitude}"
                    tools:text="123"/>
            </LinearLayout>

        </LinearLayout>
    </android.support.v7.widget.CardView>
</layout>